fix: remove redundant spacing at the top

--- a/extensions/chrome/public/styles.css
+++ b/extensions/chrome/public/styles.css
@@ -68,7 +68,7 @@ body {
 }
 
 .margin-top-and-bottom {
-  margin: 2em 0 2em 0;
+  margin: 0 0 2em 0;
 }
 
 .section-one {
